# analytics-copilot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py  mcp_server.py
backend/api/: routes.py  schemas.py
backend/database/: engine.py  inspector.py  models.py  seed.py
backend/history/: store.py
backend/llm/: client.py  dax_generator.py  guardrails.py  prompts.py  sql_generator.py
backend/visualization/: chart_builder.py  chart_picker.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChartView.tsx  DaxPanel.tsx  ErrorBoundary.tsx  HistoryPanel.tsx  QueryInput.tsx  ResultsTable.tsx  SchemaPanel.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_api.py  test_chart_picker.py  test_database.py  test_guardrails.py  test_sql_generator.py
